--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,6 +67,24 @@ test = [
 mcp-ws = [
     "websockets>=15.0.1",
 ]
+openai = [
+    # Use modern 2.x client; tested with 2.8.1
+    "openai>=2.8.1,<3.0.0",
+]
+anthropic = [
+    # Recent stable anthropic client
+    "anthropic>=0.39.0,<1.0.0",
+]
+gemini = [
+    # Official Google Gen AI SDK (Gemini Developer API + Vertex AI)
+    # See https://github.com/googleapis/python-genai
+    "google-genai>=1.52.0,<2.0.0",
+]
+llm-all = [
+    "openai>=2.8.1,<3.0.0",
+    "anthropic>=0.39.0,<1.0.0",
+    "google-genai>=1.52.0,<2.0.0",
+]
 
 [project.urls]
 Homepage = "https://github.com/SuperagenticAI/dspy-code"
