--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,8 +1,5 @@
 blank_issues_enabled: false
 contact_links:
-  - name: 💬 GitHub Discussions
-    url: https://github.com/SuperagenticAI/dspy-code/discussions
-    about: Ask questions, share ideas, and discuss with the community
   - name: 📚 Documentation
-    url: https://dspy-code.super-agentic.ai
+    url: https://superagenticai.github.io/dspy-code/
     about: Read the full documentation
